--- a/home_style.css
+++ b/home_style.css
@@ -1,34 +1,28 @@
+/** fonts --- currently not working - make work? */
+
+@font-face {
+    font-family: ubuntu;
+    src: url(ubuntu-b.ttf);
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: sourcesans;
+    src: url(sourcesanspro-light.ttf);
+    font-weight: bold;
+}
+
+/*body*/
+
 body {
-	background-color: #FFF;
-  	background: url(bamboobackground.jpg);
-  	background-attachment: fixed;
-  	height: 100%;
-  	width: 100%;
+  background-color: #FFF;
+    background: url(bamboobackground.jpg);
+    background-attachment: fixed;
+    height: 100%;
+    width: 100%;
+    font-family: 'sourcesans', Helvetica;
 }
 
-/** main stuff */
-
-
-.main {
-	padding-top:5em;
-	margin:auto;
-	text-align: auto;
-	width: 100% ;
-}
-
-h1 {
-	float: center;
-	color: white;
-	font-family: Helvetica;
-	font-size: 300%;
-
-}
-
-h2 {
-	color: white;
-	font-family: Helvetica;
-	font-size: 180%;
-}
 
 /** navbar */
 
@@ -41,42 +35,111 @@ h2 {
   margin-right:-10px;
   position:fixed;
   z-index: 9999999999;
+  display:block;
+  position:fixed;
 }
 
 .topnav img {
-	
-	width:60px;
-	height:30px;
-	float: left;
-	
-	margin-left:100px;
-	margin-top: 10px;
+  
+  width:120px;
+  height:60px;
+  float: left;
+  
+  margin-left:16em;
+  margin-top: 0px;
 
-	
+  
 
 }
-a.login {
+a.nav_items {
   float: right;
   display: block;
   color: #404040;
   text-align: center;
-  padding:14px 16px;
+  padding:18px 16px;
   
-
+  font-family: 'sourcesans', Helvetica;
   text-decoration: none;
   font-size: 17px;
+
 }
 
 
 
-.topnav a:hover {
-  background-color: #ffffff;
-  color: black;
+
+
+#links {
+    margin-right: 16em;
+
 }
 
-.topnav a.active {
+#login {
+  background-color: #d9d9d9;
+
+}
+
+#signup {
+  background-color: #f0ff78;
+
+}
+
+.topnav  #links a:hover {
+  background-color: #1abc9c;
+  color: white;
+}
+
+
+.topnav #links a.active {
     background-color: #4CAF50;
     color: white;
+}
+
+
+
+
+/** main stuff */
+
+
+.main {
+	padding-top:10em;
+	margin:auto;
+	text-align: auto;
+	width: 100% ;
+}
+
+h1 {
+	float: center;
+	color: white;
+	font-family: 'ubuntu', Helvetica;
+	font-size: 750%;
+font-weight: bold;
+
+}
+
+h2 {
+	color: white;
+	font-family: 'ubuntu', Helvetica;
+	font-size: 200%;
+  position: relative;
+  top: -2.5em;
+}
+
+#dobutton {
+  height:120px;
+  width:120px;
+  background-color: #f0ff78;
+  color: #535353;
+  font-weight: bold;
+  font-size:70px;
+  padding:37px 20px 10px 25px;
+  border-radius: 120px;
+  font-family: 'ubuntu', Helvetica;
+
+
+}
+
+#dobuttonlink {
+  text-decoration: none;
 }
 
 
