--- a/login_style.css
+++ b/login_style.css
@@ -1,67 +1,105 @@
+/** fonts --- currently not working - make work? */
+
+@font-face {
+    font-family: ubuntu;
+    src: url(ubuntu-b.ttf);
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: sourcesans;
+    src: url(sourcesanspro-light.ttf);
+    font-weight: bold;
+}
+
+
+
 body {
     background-color: #FFF;
     background: url(bamboobackground.jpg);
     background-attachment: fixed;
     height: 100%;
     width: 100%;
+    font-family:'sourcesans', Helvetica;
 }
 
 /** navbar */
-/*
+
 .topnav {
   overflow: hidden;
-  background-color: #f0ff87;
+  background-color: #ffffff;
   width: 100%;
   margin-top:-10px;
   margin-left:-10px;
   margin-right:-10px;
   position:fixed;
   z-index: 9999999999;
+  display:block;
+  position:fixed;
+  top:5px;
 }
 
 .topnav img {
-    border-radius: 25px;
-    width:30px;
-    height:30px;
-    float: left;
-    
-    margin-left:100px;
-    margin-top: 10px;
+  
+  width:120px;
+  height:60px;
+  float: left;
+  
+  margin-left:16em;
+  margin-top: 0px;
 
-    
+  
 
 }
-a.login {
+a.nav_items {
   float: right;
   display: block;
   color: #404040;
   text-align: center;
-  padding:14px 16px;
+  padding:18px 16px;
   
-
+  font-family: 'sourcesans', Helvetica;
   text-decoration: none;
   font-size: 17px;
 }
 
 
 
-.topnav a:hover {
-  background-color: #ffffff;
-  color: black;
+
+
+#links {
+    margin-right: 16em;
+
 }
 
-.topnav a.active {
+#login {
+  background-color: #d9d9d9;
+
+}
+
+#signup {
+  background-color: #f0ff78;
+
+}
+
+.topnav  #links a:hover {
+  background-color: #1abc9c;
+  color: white;
+}
+
+
+.topnav #links a.active {
     background-color: #4CAF50;
     color: white;
 }
-*/
+
 
 
 /** login form stuff */
 #loginform {
     width: 500px;
     height: 330px;
-    margin-top: 100px;
+    margin-top: 200px;
     background-color: #585858;
     border-radius: 3px;
     box-shadow: 0px 0px 10px 0px #424242;
@@ -70,6 +108,8 @@ a.login {
     font-family: helvetica;
     visibility: hidden;
     display: none;
+    opacity:0.97;
+
 }
 
 #loginform #close_login {
@@ -84,6 +124,7 @@ a.login {
     margin-top: 40px;
     font-size: 22px;
     color: #E6E6E6;
+    font-family: 'sourcesans', Helvetica;
 }
 
 #loginform #login {
@@ -92,6 +133,8 @@ a.login {
     border: 2px solid silver;
     border-radius: 3px;
     padding: 5px;
+    font-family: 'sourcesans', Helvetica;
+    
 }
 
 #loginform #password {
@@ -101,6 +144,7 @@ a.login {
     border: 2px solid silver;
     border-radius: 3px;
     padding: 5px;
+    font-family: 'sourcesans', Helvetica;
 }
 
 #loginform #dologin {
@@ -113,9 +157,13 @@ a.login {
     color: #E6E6E6;
     background-color: grey;
     font-size: 20px;
+    font-family: 'sourcesans', Helvetica;
 }
 #hide_login{
     position: relative;
-    left: 0px;
-    bottom: 50px;
+    left: 230px;
+    bottom: 0px;
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
 }
